front-end changes

--- a/databases/templates/databases/about.html
+++ b/databases/templates/databases/about.html
@@ -143,7 +143,7 @@
         </div>
         <div class="col-12 d-flex justify-content-center pt-4 pl-4 pr-4 pb-1 bg-white">
             <div class="col-12 bg-white mb-4" style="margin-bottom:20px">
-                <span class="col-12  d-flex justify-content-center mb-5 pt-1" style="font-size:20px;text-align:center;">
+                <span class="col-12  d-flex justify-content-center mb-5 pt-1" style="text-align:center;">
                     DineroHero was born from a series of experiences that motivated our founder to solve his <br> 
                 problems and those his close family members had encountered with sending or receiving money.  <br><br>
                     It all started with a very painful money transfer experience. Sometime in August 2020 our  <br>
@@ -155,7 +155,7 @@
                 </span>
             </div>
         </div>
-        <div class="col-12 d-flex justify-content-center round2 pb-0 pt-2 bg-white" style="background-color:#F2F2F2;max-height: 201px;" >
+        <div class="col-12 d-flex justify-content-center round2 pb-0 pt-2 bg-white" style="background-color:#F2F2F2;min-height: 201px;" >
             <div class="tile" id="tile-1 mb-2">
 
                 <!-- Nav tabs -->
