--- a/databases/templates/databases/navbar.html
+++ b/databases/templates/databases/navbar.html
@@ -6,11 +6,11 @@
     </div>
     <div class="col-8 d-flex justify-content-center" >
       <div class="topnav d-flex" id="myTopnav" style="align-items:center">
-        <a href="#feature" id="sec-1">Features</a>
-        <a href="#cases" id="sec-2">Use Cases</a>
-        <a href="#plans" id="sec-3">Plans</a>
-        <a href="#faq" id="sec-4">FAQs</a>
-        <a href="#about" id="sec-5"  href="{% url 'about' %}">About</a>
+        <a id="sec-1">Features</a>
+        <a id="sec-2">Use Cases</a>
+        <a id="sec-3">Plans</a>
+        <a id="sec-4">FAQs</a>
+        <a id="sec-5"  href="{% url 'about' %}">About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
