front-end changes

--- a/databases/templates/databases/about.html
+++ b/databases/templates/databases/about.html
@@ -11,12 +11,12 @@
             <span class="current" style="font-size:30px;align-items:start">Who Are We?</span>
         </div>
         <div class="col-12 d-flex justify-content-center">
-         <span style="text-align:center;padding:15px 200px">
-         We’re a fintech company building a financial platform and infrastructure to bring joy and ease on<br>
-                                money issues to people around the world.<br> 
-        A hero is someone who does something other people couldn’t do, don’t want to do, or don’t think<br> 
-            could possibly be done. It takes boldness, belief and brilliance to be a hero. As a company,<br> 
-           that's exactly who we are on money issues. ‘Dinero’ [dee-ne-ro] is the Spanish word for money<br> 
+         <span style="text-align:center;text-align: center; padding:15px 200px">
+         We’re a fintech company building a financial platform and infrastructure to bring joy and ease on
+                                money issues to people<br> around the world.<br> 
+        A hero is someone who does something other people couldn’t do, don’t want to do, or don’t think
+            could possibly be done. It takes<br> boldness, belief and brilliance to be a hero. As a company,
+           that's exactly who we are on money issues. ‘Dinero’ [dee-ne-ro] is the <br> Spanish word for money
                 and combined with ‘Hero’ [hee-ro], you have our name - DineroHero.
 
         </span>
@@ -26,9 +26,9 @@
         </div>
         <div class="col-12 d-flex justify-content-center">
          <span style="text-align:center;padding:15px 200px"> 
-            Our primary goal is to bring joy and ease on money issues to people globally.<br> 
-        Our second aim is to help people understand climate change and personally contribute to a <br>
-                        greener globe through better money decisions.
+            Our primary goal is to bring joy and ease on money issues to people globally.<br><br> 
+        Our second aim is to help people understand climate change and personally contribute to 
+                        greener globe through better money <br>decisions.
          </span>
         </div>
         <div class="col-12 d-flex justify-content-center pt-4 pl-4 pr-4 pb-1" style="background-color:#F2F2F2">
@@ -144,13 +144,13 @@
         <div class="col-12 d-flex justify-content-center pt-4 pl-4 pr-4 pb-1 bg-white">
             <div class="col-12 bg-white mb-4" style="margin-bottom:20px">
                 <span class="col-12  d-flex justify-content-center mb-5 pt-1" style="text-align:center;">
-                    DineroHero was born from a series of experiences that motivated our founder to solve his <br> 
-                problems and those his close family members had encountered with sending or receiving money.  <br><br>
-                    It all started with a very painful money transfer experience. Sometime in August 2020 our  <br>
-                        founder, Dominic, tried helping his younger sister make an international money transfer to <br>
-                        Vietnam (a payment to her hair extension supplier). He got the recipient's bank details and had <br>
-                        to make the payment via SWIFT transfer at a local bank. He chose to start with a test of 200 <br>
-                        USD just to see how it goes before making other bigger transfers. <br><br>
+                    DineroHero was born from a series of experiences that motivated our founder to solve his 
+                problems  <br>and those his close family members had encountered with sending or receiving money.  <br><br>
+                    It all started with a very painful money transfer experience. Sometime in August 2020 our  
+                        founder,<br> Dominic, tried helping his younger sister make an international money transfer to 
+                        Vietnam (a payment to<br> her hair extension supplier). He got the recipient's bank details and had 
+                        to make the payment via SWIFT<br> transfer at a local bank. He chose to start with a test of 200
+                        USD just to see how it goes before making<br> other bigger transfers. <br><br><br>
                         To put it mildly, the experience was a nightmare for at least the following reasons:
                 </span>
             </div>
@@ -188,7 +188,7 @@
                     </div>
                     <div class="tab-pane fade mb-5 pb-3 mt-3" id="s2" role="tabpanel" aria-labelledby="profile-tab">
                         <div class="d-flex justify-content-center row">
-                            <div class="col-11 bg-white border3 mb-4 rounded-border2" style="margin-bottom:20px">
+                            <div class="col-10 bg-white border3 mb-4 rounded-border2" style="margin-bottom:20px">
                                 <span class="col-12  d-flex justify-content-center pt-3 mb-3" style="font-size:20px;text-align:center;">
                                 There was the inconvenience of being regularly asked about the status of the transfer and not <br> 
                                 having answers other than frequenting the bank at least 3 times in about a week with no positive  <br>
@@ -209,7 +209,7 @@
                     </div>
                     <div class="tab-pane fade mb-5 pb-3 mt-3" id="s4" role="tabpanel" aria-labelledby="setting-tab">
                         <div class="d-flex justify-content-center row">
-                            <div class="col-11 bg-white border3 mb-4 rounded-border2" style="margin-bottom:20px">
+                            <div class="col-10 bg-white border3 mb-4 rounded-border2" style="margin-bottom:20px">
                                 <span class="col-12  d-flex justify-content-center pt-3 mb-3" style="font-size:20px;text-align:center;">
                                 He was given the option to pay another 25 USD (or 1% whichever was higher) in transfer fee to<br> 
                                 make a second attempt to transfer the money. But worst of all, when the money sent back finally <br>
