--- a/databases/templates/databases/navbar.html
+++ b/databases/templates/databases/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
-<nav class="container bg-white" >
-  <div class="row p-2">
+<nav class="container bg-white " >
+  <div class="row p-2" >
     <div class="col-4 d-flex justify-content-end" style="align-items:center;">
       <a href="{% url 'index' %}"><img src="{% static 'images/logo.png' %}"></a>
     </div>
@@ -19,3 +19,34 @@
     </div>
   </div>
 </nav>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered " role="document">
+        <div class="modal-content d-flex justify-content-center modal-border">
+            <h5 class="modal-title current p-3" id="exampleModalLabel"  style="text-align:center">Stay in touch</h5>
+            {% comment %} <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button> {% endcomment %}
+        <div class="modal-body text-center">
+            <div class="row">
+                <p class="col-12">Thank you for your interest in DineroHero. The app is still in the works.</p>
+                <p class="col-12">Leave your email below and we'll let you know once it's done</p>
+                <div class="col-12 d-flex justify-content-center">
+                <input type="text" class="form-control rounded-border col-6 text-center" placeholder="Enter your email here" >
+                </div>
+                <br>
+            </div>
+        </div>
+        <div class="modal-footer">
+        <div class="col-12 d-flex justify-content-center">
+            <button class="btn btn-secondary rounded-border col-4" style="background-color:#32a432;color:white"  type="button" data-dismiss="modal">Submit</button><br>
+            <div class="icon">
+                <button type="button" class="button-close btn-cross" data-dismiss="modal" aria-label="Close">
+            </div>
+        </button>
+        </div>
+        </div>
+        
+        </div>
+    </div>
+</div>
