front-end changes

--- a/databases/templates/databases/index.html
+++ b/databases/templates/databases/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container-fluid p-0">
+<div class="container-fluid" style="padding-top: 85px;">
     <div class="row pt-0 pr-0 pl-0 pb-3" style="background-color:#00cc66;">
         <div class="w-100">
             <p style="font-size:15px;color:#ccf8d6" class="col-12 d-flex justify-content-center mb-0 pt-3">We're building the</p>
@@ -21,7 +21,7 @@
     </div>
     <div class="row" style="min-height:2286;min-width:1501;background-color:#15AC5D;">
         <div class="col-12 d-flex justify-content-center text-white">
-            <span style="font-size:19px">The Dinerhero promise</span>
+            <span style="font-size:19px">The Dinerohero promise</span>
         </div>
         <div class="col-12 d-flex justify-content-center text-white">
             <p style="font-size:25px">Transaction fees regularly at zero, because we're your hero!</p>
@@ -264,7 +264,7 @@
             <img src="{% static 'images/hero.png' %}" class="ml-5" style="max-width:202px;max-height:485px;">
         </div> 
     </div>
-    <div class="row pb-5 bg-white" id="feature">
+    <div class="row pb-5 bg-white" id="features">
        <div class="tile" id="tile-1">
 
                 <!-- Nav tabs -->
@@ -322,7 +322,7 @@
     <div class="row bg-white pb-5" id="cases">
         <div class="col-12" >
             <span style="color:black;font-size:30px" class="col-12 d-flex justify-content-center pt-2 pb-1">USE CASES</span>
-            <p class="col-12 d-flex justify-content-center ">See how you can use DinerHero to deal with money issues</p>
+            <p class="col-12 d-flex justify-content-center ">See how you can use DineroHero to deal with money issues</p>
         </div>
         <div class="col-6 d-flex justify-content-end">
             <div class="card border-success mb-3 mr-3" style="max-width: 23rem;">
