--- a/databases/templates/databases/about.html
+++ b/databases/templates/databases/about.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container-fluid p-0 bg-white">
+<div class="container-fluid bg-white" style="padding-top: 85px;">
     <div class="row about-row d-flex justify-content-center align-content-center text-white">
     <span style="font-size:80px;"><b>OUR COMPANY</b></span>
     </div>
@@ -11,7 +11,7 @@
             <span class="current" style="font-size:30px;align-items:start">Who Are We?</span>
         </div>
         <div class="col-12 d-flex justify-content-center">
-         <span style="text-align:center;text-align: center; padding:15px 200px">
+         <span style="text-align:center; padding:15px 100px;font-size:20px;">
          We’re a fintech company building a financial platform and infrastructure to bring joy and ease on
                                 money issues to people<br> around the world.<br> 
         A hero is someone who does something other people couldn’t do, don’t want to do, or don’t think
@@ -25,7 +25,7 @@
             <span class="current" style="font-size:30px;align-items:start">Our Mission</span>
         </div>
         <div class="col-12 d-flex justify-content-center">
-         <span style="text-align:center;padding:15px 200px"> 
+         <span style="text-align:center;padding:15px 100px;font-size:20px;"> 
             Our primary goal is to bring joy and ease on money issues to people globally.<br><br> 
         Our second aim is to help people understand climate change and personally contribute to 
                         greener globe through better money <br>decisions.
@@ -141,9 +141,9 @@
         <div class="col-12 d-flex justify-content-center pt-4 pl-4 pr-4 pb-1 bg-white" >
             <span class="current" style="font-size:30px;align-items:start" > Our Story</span>
         </div>
-        <div class="col-12 d-flex justify-content-center pt-4 pl-4 pr-4 pb-1 bg-white">
+        <div class="col-12 d-flex justify-content-center pt-4 pb-1 bg-white">
             <div class="col-12 bg-white mb-4" style="margin-bottom:20px">
-                <span class="col-12  d-flex justify-content-center mb-5 pt-1" style="text-align:center;">
+                <span class="col-12  d-flex justify-content-center mb-5 pt-1" style="text-align:center; padding:15px 100px;font-size:20px;">
                     DineroHero was born from a series of experiences that motivated our founder to solve his 
                 problems  <br>and those his close family members had encountered with sending or receiving money.  <br><br>
                     It all started with a very painful money transfer experience. Sometime in August 2020 our  
@@ -229,9 +229,9 @@
         <div class="col-12 bg-white mb-4 d-flex justify-content-center pt-4 pl-4 pr-4 pb-1 " style="margin-bottom:20px">
                 <span class="col-12  d-flex justify-content-center mb-5 pt-1" style="font-size:20px;text-align:center;">
                     To think this was just for 200 USD…what would have happened if a much larger amount was  <br> 
-                involved? Of course, he refused to do the second transfer. But it was right after going through this <br><br>
+                involved? Of course, he refused to do the second transfer. But it was right after going through this <br>
                     painful experience that Dominic started looking for better ways to solve this. In a short while, that  <br>
-                        led to the birth of DineroHero!  <br>
+                        led to the birth of DineroHero!  <br>  <br>
                         Despite that awful instance, there were pleasant situations when he’d help his sisters make <br>
                         payments in US dollars to other countries or online and then they would pay in the local <br>
                         currency equivalent (at an agreed and consistently discounted exchange rate that he calls 'hero  <br>
