--- a/databases/templates/databases/navbar.html
+++ b/databases/templates/databases/navbar.html
@@ -1,15 +1,15 @@
 {% load static %}
-<nav class="container bg-white " >
+<nav class="container bg-white" >
   <div class="row p-2" >
     <div class="col-4 d-flex justify-content-end" style="align-items:center;">
       <a href="{% url 'index' %}"><img src="{% static 'images/logo.png' %}"></a>
     </div>
     <div class="col-8 d-flex justify-content-center" >
       <div class="topnav d-flex" id="myTopnav" style="align-items:center">
-        <a id="sec-1">Features</a>
-        <a id="sec-2">Use Cases</a>
-        <a id="sec-3">Plans</a>
-        <a id="sec-4">FAQs</a>
+        <a href="{% url 'index' %}#features">Features</a>
+        <a href="{% url 'index' %}#cases">Use Cases</a>
+        <a href="{% url 'index' %}#plans">Plans</a>
+        <a href="{% url 'index' %}#faq">FAQs</a>
         <a id="sec-5"  href="{% url 'about' %}">About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
@@ -39,7 +39,7 @@
         </div>
         <div class="modal-footer">
         <div class="col-12 d-flex justify-content-center">
-            <button class="btn btn-secondary rounded-border col-4" style="background-color:#32a432;color:white"  type="button" data-dismiss="modal">Submit</button><br>
+            <button class="btn btn-success rounded-border col-4" style="background-color:#00cc66 !important;color:white"  type="button" data-dismiss="modal">Submit</button><br>
             <div class="icon">
                 <button type="button" class="button-close btn-cross" data-dismiss="modal" aria-label="Close">
             </div>
