--- a/myfigurecollection/static/databases/style.css
+++ b/myfigurecollection/static/databases/style.css
@@ -24,7 +24,7 @@ nav {
   background-color: white;
   max-width: inherit !important;
 }
-.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl{
+.inherit{
     width: 100%;
     margin-right: auto;
     margin-left: auto;
