front-end changes

--- a/databases/templates/databases/about.html
+++ b/databases/templates/databases/about.html
@@ -11,12 +11,12 @@
             <span class="current" style="font-size:30px;align-items:start">Who Are We?</span>
         </div>
         <div class="col-12 d-flex justify-content-center">
-         <span style="text-align:center; padding:15px 100px;font-size:20px;">
+         <span style="text-align:center; padding:15px 200px;font-size:20px;">
          We’re a fintech company building a financial platform and infrastructure to bring joy and ease on
-                                money issues to people<br> around the world.<br> 
+                                money issues to people around the world.<br> 
         A hero is someone who does something other people couldn’t do, don’t want to do, or don’t think
-            could possibly be done. It takes<br> boldness, belief and brilliance to be a hero. As a company,
-           that's exactly who we are on money issues. ‘Dinero’ [dee-ne-ro] is the <br> Spanish word for money
+            could possibly be done. <br>It takes boldness, belief and brilliance to be a hero. As a company,
+           that's exactly who we are on money issues. ‘Dinero’ [dee-ne-ro] is the Spanish word for money
                 and combined with ‘Hero’ [hee-ro], you have our name - DineroHero.
 
         </span>
@@ -25,7 +25,7 @@
             <span class="current" style="font-size:30px;align-items:start">Our Mission</span>
         </div>
         <div class="col-12 d-flex justify-content-center">
-         <span style="text-align:center;padding:15px 100px;font-size:20px;"> 
+         <span style="text-align:center;padding:15px 200px;font-size:20px;"> 
             Our primary goal is to bring joy and ease on money issues to people globally.<br><br> 
         Our second aim is to help people understand climate change and personally contribute to 
                         greener globe through better money <br>decisions.
@@ -141,9 +141,8 @@
         <div class="col-12 d-flex justify-content-center pt-4 pl-4 pr-4 pb-1 bg-white" >
             <span class="current" style="font-size:30px;align-items:start" > Our Story</span>
         </div>
-        <div class="col-12 d-flex justify-content-center pt-4 pb-1 bg-white">
-            <div class="col-12 bg-white mb-4" style="margin-bottom:20px">
-                <span class="col-12  d-flex justify-content-center mb-5 pt-1" style="text-align:center; padding:15px 100px;font-size:20px;">
+        <div class="col-12 d-flex justify-content-center">
+         <span style="text-align:center; padding:15px 200px;font-size:20px;">
                     DineroHero was born from a series of experiences that motivated our founder to solve his 
                 problems  <br>and those his close family members had encountered with sending or receiving money.  <br><br>
                     It all started with a very painful money transfer experience. Sometime in August 2020 our  
@@ -153,7 +152,6 @@
                         USD just to see how it goes before making<br> other bigger transfers. <br><br><br>
                         To put it mildly, the experience was a nightmare for at least the following reasons:
                 </span>
-            </div>
         </div>
         <div class="col-12 d-flex justify-content-center round2 pb-0 pt-2 bg-white" style="background-color:#F2F2F2;min-height: 201px;" >
             <div class="tile" id="tile-1 mb-2">
@@ -176,20 +174,20 @@
 
                 <!-- Tab panes -->
                 <div class="tab-content">
-                    <div class="tab-pane fade show active mb-5 pb-3 mt-3" id="s1" role="tabpanel" aria-labelledby="home-tab">
+                    <div class="tab-pane fade show active mb-1 pb-1 mt-3" id="s1" role="tabpanel" aria-labelledby="home-tab">
                         <div class="d-flex justify-content-center row">
-                            <div class="col-10 bg-white border3 mb-4 rounded-border2" style="margin-bottom:20px">
-                                <span class="col-12  d-flex justify-content-center  pt-3 mb-3" style="font-size:20px;text-align:center;">
+                            <div class="col-10 bg-white border3 mb-1 rounded-border2 d-flex align-items-center" style="margin-bottom:20px;min-height:210px;min-width:842px">
+                                <span class="col-12  d-flex justify-content-center  pt-3" style="font-size:20px;text-align:center;">
                                 Neither he nor the recipient could track where the money was after the transfer. The sending  <br> 
                                             bank couldn't provide any information on this. 
                                 </span>
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane fade mb-5 pb-3 mt-3" id="s2" role="tabpanel" aria-labelledby="profile-tab">
+                    <div class="tab-pane fade mb-1 pb-1 mt-3" id="s2" role="tabpanel" aria-labelledby="profile-tab">
                         <div class="d-flex justify-content-center row">
-                            <div class="col-10 bg-white border3 mb-4 rounded-border2" style="margin-bottom:20px">
-                                <span class="col-12  d-flex justify-content-center pt-3 mb-3" style="font-size:20px;text-align:center;">
+                            <div class="col-10 bg-white border3 mb-1 rounded-border2 d-flex align-items-center" style="margin-bottom:20px;min-height:210px;min-width:842px">
+                                <span class="col-12  d-flex justify-content-center pt-3" style="font-size:20px;text-align:center;">
                                 There was the inconvenience of being regularly asked about the status of the transfer and not <br> 
                                 having answers other than frequenting the bank at least 3 times in about a week with no positive  <br>
                                     outcome.
@@ -197,20 +195,20 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane fade mb-5 pb-3 mt-3" id="s3" role="tabpanel" aria-labelledby="contact-tab">
+                    <div class="tab-pane fade mb-1 pb-1 mt-3" id="s3" role="tabpanel" aria-labelledby="contact-tab">
                         <div class="d-flex justify-content-center row">
-                            <div class="col-10 bg-white border3 mb-4 rounded-border2" style="margin-bottom:20px">
-                                <span class="col-12  d-flex justify-content-center pt-3 mb-3" style="font-size:20px;text-align:center;">
+                            <div class="col-10 bg-white border3 mb-1 rounded-border2 d-flex align-items-center" style="margin-bottom:20px;min-height:210px;min-width:842px">
+                                <span class="col-12  d-flex justify-content-center pt-3" style="font-size:20px;text-align:center;">
                                 It was only after a little more than a week that the sending bank informed Dominic that the<br> 
                                     money was to be sent back due to some incorrect recipient details.
                                 </span>
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane fade mb-5 pb-3 mt-3" id="s4" role="tabpanel" aria-labelledby="setting-tab">
+                    <div class="tab-pane fade mb-1 pb-1 mt-3" id="s4" role="tabpanel" aria-labelledby="setting-tab">
                         <div class="d-flex justify-content-center row">
-                            <div class="col-10 bg-white border3 mb-4 rounded-border2" style="margin-bottom:20px">
-                                <span class="col-12  d-flex justify-content-center pt-3 mb-3" style="font-size:20px;text-align:center;">
+                            <div class="col-10 bg-white border3 mb-1 rounded-border2" style="margin-bottom:20px;min-height:210px;min-width:842px">
+                                <span class="col-12  d-flex justify-content-center pt-3" style="font-size:20px;text-align:center;">
                                 He was given the option to pay another 25 USD (or 1% whichever was higher) in transfer fee to<br> 
                                 make a second attempt to transfer the money. But worst of all, when the money sent back finally <br>
                                  arrived in his account it was only about 150 USD. Why? According to the sending bank, the <br>
@@ -226,8 +224,8 @@
 
             </div>
         </div>
-        <div class="col-12 bg-white mb-4 d-flex justify-content-center pt-4 pl-4 pr-4 pb-1 " style="margin-bottom:20px">
-                <span class="col-12  d-flex justify-content-center mb-5 pt-1" style="font-size:20px;text-align:center;">
+        <div class="col-12 d-flex justify-content-center">
+            <span style="text-align:center; padding:15px 200px;font-size:20px;">
                     To think this was just for 200 USD…what would have happened if a much larger amount was  <br> 
                 involved? Of course, he refused to do the second transfer. But it was right after going through this <br>
                     painful experience that Dominic started looking for better ways to solve this. In a short while, that  <br>
@@ -235,14 +233,14 @@
                         Despite that awful instance, there were pleasant situations when he’d help his sisters make <br>
                         payments in US dollars to other countries or online and then they would pay in the local <br>
                         currency equivalent (at an agreed and consistently discounted exchange rate that he calls 'hero  <br>
-                        rate') into any account he specified (typically his Mum's or younger siblings'). <br>
+                        rate') into any account he specified (typically his Mum's or younger siblings'). <br><br>
                         After a careful examination of such situations described above and how he's personally <br>
                         experienced subpar customer service in consumer finance for years, or quickly sent phone <br>
                         airtime and money to his family via cryptocurrencies with minimal fees, he decided that instead <br>
                         of being a sole hero on those money issues, he would build a platform to enable and connect <br>
                         more money heroes while tackling other painful money issues people faced. Hence, the mission<br>
                         became crystal clear -  to bring joy and ease on money issues to people globally!
-                </span>
+            </span>
         </div>
         <div class="col-12 d-flex justify-content-center mb-4 pt-4 pl-4 pr-4 pb-1 bg-white" style="background-color:#F2F2F2">
             <span class="current" style="font-size:30px;align-items:start" > Our Team</span>
