--- a/databases/templates/databases/index.html
+++ b/databases/templates/databases/index.html
@@ -394,7 +394,7 @@
         </div>
         
     </div>
-    <div class="row" id="plans">
+    <div class="row" id="plans" style="background-color: #F2F2F2 !important;">
         <div class="col-12" >
             <span style="color:black;font-size:30px" class="col-12 d-flex justify-content-center pt-2 pb-1">ACCOUNT PLANS</span>
             <p class="col-12 d-flex justify-content-center ">Compare and choose account plan that fits your personal need or lifestyle</p>
