--- a/myfigurecollection/static/databases/style.css
+++ b/myfigurecollection/static/databases/style.css
@@ -14,7 +14,7 @@
 }
 body{
   font-family: 'Linotte' !important;
-  background-color: white !important;
+  background-color: #F2F2F2 !important;
 }
 nav {
   position: fixed;
