front-end changes

--- a/databases/templates/databases/about.html
+++ b/databases/templates/databases/about.html
@@ -13,9 +13,9 @@
         <div class="col-12 d-flex justify-content-center">
          <span style="text-align:center; padding:15px 200px;font-size:20px;">
          We’re a fintech company building a financial platform and infrastructure to bring joy and ease on
-                                money issues to people around the world.<br> 
+                                money issues to people around the world.<br><br>
         A hero is someone who does something other people couldn’t do, don’t want to do, or don’t think
-            could possibly be done. <br>It takes boldness, belief and brilliance to be a hero. As a company,
+            could possibly be done. It takes boldness, belief and brilliance to be a hero. As a company,
            that's exactly who we are on money issues. ‘Dinero’ [dee-ne-ro] is the Spanish word for money
                 and combined with ‘Hero’ [hee-ro], you have our name - DineroHero.
 
