--- a/databases/templates/databases/index.html
+++ b/databases/templates/databases/index.html
@@ -150,12 +150,12 @@
                         </div>
                         <div class="col-md-4 pb-2">
                             <br>
-                            <button class="rounded-circle btn-success w-75 h-75 ml-3"> You Save</button>
+                            <button class="rounded-circle btn-success w-75 h-75 ml-3" style="background-color:#00cc66"> You Save</button>
                         </div>
                     </div>
                     </div>
                     <hr>
-                    <button class="btn btn-secondary rounded-border w-75" style="background-color:#32a432;color:white" data-toggle="modal" data-target="#exampleModal" type="button">Continue</button>
+                    <button class="btn btn-secondary rounded-border w-75" style="background-color:#00cc66;color:white" data-toggle="modal" data-target="#exampleModal" type="button">Continue</button>
                 </form>
             </div>
             
@@ -322,7 +322,7 @@
     <div class="row bg-white pb-5" id="cases">
         <div class="col-12" >
             <span style="color:black;font-size:30px" class="col-12 d-flex justify-content-center pt-2 pb-1">USE CASES</span>
-            <p class="col-12 d-flex justify-content-center ">See how you can use DineroHero to deal with money issues</p>
+            <p class="col-12 d-flex justify-content-center " style="font-size:20px">See how you can use DineroHero to deal with money issues</p>
         </div>
         <div class="col-6 d-flex justify-content-end">
             <div class="card border-success mb-3 mr-3" style="max-width: 23rem;">
@@ -397,44 +397,44 @@
     <div class="row" id="plans" style="background-color: #F2F2F2 !important;">
         <div class="col-12" >
             <span style="color:black;font-size:30px" class="col-12 d-flex justify-content-center pt-2 pb-1">ACCOUNT PLANS</span>
-            <p class="col-12 d-flex justify-content-center ">Compare and choose account plan that fits your personal need or lifestyle</p>
+            <p class="col-12 d-flex justify-content-center " style="font-size:20px">Compare and choose account plan that fits your personal need or lifestyle</p>
         </div>
         <div class="col-4 d-flex justify-content-center">
             <ul class="list-group col-11 m-3">
-                <li class="list-group-item bg-success text-white"><b>STANDARD</b> (Silver)</li>
-                <li class="list-group-item">Annual Price<br>Free</li>
-                <li class="list-group-item">Express Transfer<br>500 GBP free monthly</li>
-                <li class="list-group-item">Crowd Transfer<br>1000 GBP free monthly</li>
-                <li class="list-group-item">ATM Withdrawal <br>500 GBP free monthly</li>
-                <li class="list-group-item">Fiat-Crypto Conversion<br>200 GBP free monthly</li>
-                <li class="list-group-item">Phone Top-up<br>3 free top-ups monthly</li>
-                <li class="list-group-item">Customer Support<br>E-mail and Live Chat</li>
-                <li class="list-group-item text-success">More on the way…</li>
+                <li class="list-group-item text-white" style="background-color:#00cc66"><b>STANDARD</b> (Silver)</li>
+                <li class="list-group-item "><span class="plan-title">Annual Price</span><br>Free</li>
+                <li class="list-group-item"><span class="plan-title">Express Transfer</span><br>500 GBP free monthly</li>
+                <li class="list-group-item"><span class="plan-title">Crowd Transfer</span><br>1000 GBP free monthly</li>
+                <li class="list-group-item"><span class="plan-title">ATM Withdrawal</span> <br>500 GBP free monthly</li>
+                <li class="list-group-item"><span class="plan-title">Fiat-Crypto Conversion</span><br>200 GBP free monthly</li>
+                <li class="list-group-item"><span class="plan-title">Phone Top-up</span><br>3 free top-ups monthly</li>
+                <li class="list-group-item"><span class="plan-title">Customer Support</span><br>E-mail and Live Chat</li>
+                <li class="list-group-item" style="color:#00cc66">More on the way…</li>
             </ul>
         </div>
         <div class="col-4 d-flex justify-content-center">
             <ul class="list-group col-11 m-3 border-warning">
                 <li class="list-group-item border-warning bg-warning text-white"><b>PREMIUM </b>(Gold)</li>
-                <li class="list-group-item">Annual Price<br>49.99 GBP</li>
-                <li class="list-group-item">Express Transfer<br>1000 GBP free monthly</li>
-                <li class="list-group-item">Crowd Transfer<br>2000 GBP free monthly</li>
-                <li class="list-group-item">ATM Withdrawal <br>1000 GBP free monthly</li>
-                <li class="list-group-item">Fiat-Crypto Conversion<br>500 GBP free monthly</li>
-                <li class="list-group-item">Phone Top-up<br>5 free top-ups monthly</li>
-                <li class="list-group-item">Customer Support<br>Standard + 3 Preferred Agents</li>
+                <li class="list-group-item"><span class="plan-title">Annual Price</span><br>49.99 GBP</li>
+                <li class="list-group-item"><span class="plan-title">Express Transfer</span><br>1000 GBP free monthly</li>
+                <li class="list-group-item"><span class="plan-title">Crowd Transfer</span><br>2000 GBP free monthly</li>
+                <li class="list-group-item"><span class="plan-title">ATM Withdrawal</span> <br>1000 GBP free monthly</li>
+                <li class="list-group-item"><span class="plan-title">Fiat-Crypto Conversion</span><br>500 GBP free monthly</li>
+                <li class="list-group-item"><span class="plan-title">Phone Top-up</span><br>5 free top-ups monthly</li>
+                <li class="list-group-item"><span class="plan-title">Customer Support</span><br>Standard + 3 Preferred Agents</li>
                 <li class="list-group-item text-warning">Even more on the way…</li>
             </ul>
         </div>
         <div class="col-4 d-flex justify-content-center">
             <ul class="list-group col-11 m-3">
                 <li class="list-group-item bg-primary text-white"><b>ULTRA PREMIUM </b>(Platinum)</li>
-                <li class="list-group-item">Annual Price<br>149.99 GBP</li>
-                <li class="list-group-item">Express Transfer<br>2000 GBP free monthly</li>
-                <li class="list-group-item">Crowd Transfer<br>3000 GBP free monthly</li>
-                <li class="list-group-item">ATM Withdrawal <br>2000 GBP free monthly</li>
-                <li class="list-group-item">Fiat-Crypto Conversion<br>1000 GBP free monthly</li>
-                <li class="list-group-item">Phone Top-up<br>10 free top-ups monthly</li>
-                <li class="list-group-item">Customer Support<br>Dedicated VIP Account Hero</li>
+                <li class="list-group-item"><span class="plan-title">Annual Price</span><br>149.99 GBP</li>
+                <li class="list-group-item"><span class="plan-title">Express Transfer</span><br>2000 GBP free monthly</li>
+                <li class="list-group-item"><span class="plan-title">Crowd Transfer</span><br>3000 GBP free monthly</li>
+                <li class="list-group-item"><span class="plan-title">ATM Withdrawal</span> <br>2000 GBP free monthly</li>
+                <li class="list-group-item"><span class="plan-title">Fiat-Crypto Conversion</span><br>1000 GBP free monthly</li>
+                <li class="list-group-item"><span class="plan-title">Phone Top-up</span><br>10 free top-ups monthly</li>
+                <li class="list-group-item"><span class="plan-title">Customer Support</span><br>Dedicated VIP Account Hero</li>
                 <li class="list-group-item text-primary">So much more on the way…</li>
             </ul>
         </div>
