front-end changes

--- a/databases/templates/databases/index.html
+++ b/databases/templates/databases/index.html
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="row" style="min-height:2286;min-width:1501;background-color:#15AC5D;">
-        <div class="col-12 d-flex justify-content-center text-white">
+        <div class="col-12 d-flex justify-content-center text-white pt-3">
             <span style="font-size:19px">The Dinerohero promise</span>
         </div>
         <div class="col-12 d-flex justify-content-center text-white">
@@ -440,8 +440,8 @@
         </div>
     </div>
     <div class="row d-flex justify-content-center align-content-center pl-5 pr-5 pb-5 pt-2 bg-white" id="faq">
-        <h2 class="col-12 d-flex justify-content-center pt-3">FREQUENTLY ASKED QUESTIONS (FAQs)</h2><br>
-        <p class="col-12 d-flex justify-content-center "> Save time and get quick answers here to the most frequently asked questions</p>
+        <h2 class="col-12 d-flex justify-content-center pt-3" style="font-size:30px">FREQUENTLY ASKED QUESTIONS (FAQs)</h2><br>
+        <p class="col-12 d-flex justify-content-center " style="font-size:20px"> Save time and get quick answers here to the most frequently asked questions</p>
         <div class="accordion mt-2 pt-0">
             <div class="accordion-item">
                 <h2 id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Lorem Ipsum is simply dummy text of the printing and typesetting industry?</span><span class="icon" aria-hidden="true"></span></h2>
